--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
-  <%= @product.name %>
+  <b>Title:</b>
+  <%= @product.title %>
 </p>
 
 <p>
-  <b>Company:</b>
-  <%= @product.company_id %>
+  <b>Subject:</b>
+  <%= @product.subject %>
 </p>
 
 
