--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
 
 <table>
   <tr>
-    <th>Name</th>
+    <th>Title</th>
     <th>Company</th>
     <th></th>
     <th></th>
@@ -11,7 +11,7 @@
 
 <% @products.each do |product| %>
   <tr>
-    <td><%= product.name %></td>
+    <td><%= product.title %></td>
     <td><%= product.company_id %></td>
     <td><%= link_to 'Show', product %></td>
     <td><%= link_to 'Edit', edit_product_path(product) %></td>
