Full Seed File Created and Removes Author and Subject from Product
Full Seed File Created and Removes Author and Subject from Product

--- a/app/views/products/show.xls.erb
+++ b/app/views/products/show.xls.erb
@@ -12,6 +12,7 @@
         <Cell><Data ss:Type="String"><%= value[:ad_group] %></Data></Cell>
         <Cell><Data ss:Type="String"><%= value[:keyword] %></Data></Cell>
         <Cell><Data ss:Type="String"><%= value[:match_type] %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= value[:destination_url] %></Data></Cell>
       </Row>
     <% end %>
     </Table>
