--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,11 +11,7 @@
 
 <% @products.each do |product| %>
   <tr>
-    <td><%= product.title %></td>
-    <td><%= product.company_id %></td>
-    <td><%= link_to 'Show', product %></td>
-    <td><%= link_to 'Edit', edit_product_path(product) %></td>
-    <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to product.title, product %></td>
   </tr>
 <% end %>
 </table>
