Adds commenting to products show view

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,6 +16,10 @@
 		<th>Digital</th>
 	</tr>
 	<tr>		
+		<!-- list all existing keywords if they existing --> 
+		<!-- create a view helper method to do this.  Show Value add <br /> -->
+		<!-- Create function for user to add new keywords --> 
+		<!-- Create function for user to create the keyword attribute and product attribute if first keyword --> 
 		<td><br /><input type="text" /></td>
 		<td><br /><input type="text" /></td>
 		<td><br /><input type="text" /></td>
