Fixed products#show page so that correct values show and that the digital and book ProductAttribute connections are created correctly on first time page visit.  Still need to build way to add new keywords by default when id is zero and none exist yet.  More work to dogit add app/

--- a/app/views/product_attribute_type_variation_values/_form.html.erb
+++ b/app/views/product_attribute_type_variation_values/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :product_attribute_type_variation_id %><br />
-    <%= f.number_field :product_attribute_type_variation_id %>
+    <%= f.select :product_attribute_type_variation_id, ProductAttributeTypeVariation.all %>
   </div>
   <div class="field">
     <%= f.label :value %><br />
