--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,12 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :company_id %><br />
-    <%= f.number_field :company_id %>
+    <%= f.label :title %><br />
+    <%= f.text_field :title %>
   </div>
   <div class="actions">
     <%= f.submit %>
