Revamps the Entire Way of Adding and editing products by using the products/index and products/show pages.  This looks pretty awesome and I think G is going to be very happy

--- a/app/views/product_attribute_type_variation_values/_form.html.erb
+++ b/app/views/product_attribute_type_variation_values/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :product_attribute_type_variation_id %><br />
-    <%= f.select :product_attribute_type_variation_id, ProductAttributeTypeVariation.all %>
+    <%= f.collection_select :product_attribute_type_variation_id, ProductAttributeTypeVariation.all, :id, :name %>
   </div>
   <div class="field">
     <%= f.label :value %><br />
