--- a/app/views/product_attribute_type_variations/index.html.erb
+++ b/app/views/product_attribute_type_variations/index.html.erb
@@ -13,8 +13,8 @@
   <tr>
     <td><%= product_attribute_type_variation.product_attribute_type_id %></td>
     <td><%= product_attribute_type_variation.name %></td>
-    <td><%= link_to 'Show', product_attribute_type_variation %></td>
-    <td><%= link_to 'Edit', edit_product_attribute_type_variation_path(product_attribute_type_variation) %></td>
+    <td><%= link_to 'Edit Keywords', product_attribute_type_variation %></td>
+    <td><%= link_to 'Edit Name', edit_product_attribute_type_variation_path(product_attribute_type_variation) %></td>
     <td><%= link_to 'Destroy', product_attribute_type_variation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
