--- a/app/views/product_attribute_type_variations/show.html.erb
+++ b/app/views/product_attribute_type_variations/show.html.erb
@@ -1,5 +1,41 @@
 <p id="notice"><%= notice %></p>
 
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<% puts '666666666666666666666666666666666666666666666666666666' %>
+<%= form_for(@product_attribute_type_variation_value) do |f| %>
+  <% unless @product_attribute_type_variation_values.nil? %>
+  	<% puts 'got here' %> 
+	  <% unless @product_attribute_type_variation_values.nil? %> 
+	  	<% puts 'got here too' %> 
+	  	<% @product_attribute_type_variation_values.each do |keyword| %>
+	  		<%= keyword.value %><br />
+	  	<% end %> 
+	  <% end %> 
+	<% end %> 
+
+  <div class="field">
+    <%= f.hidden_field :product_attribute_type_variation_id, :value => @product_attribute_type_variation.id %> 
+    <%= f.text_field :value %>
+  </div>
+  <div class="actions">
+    <%= f.submit "Add Keyword" %>
+  </div>
+<% end %>
+
+
 <p>
   <b>Product attribute type:</b>
   <%= @product_attribute_type_variation.product_attribute_type_id %>
@@ -11,5 +47,4 @@
 </p>
 
 
-<%= link_to 'Edit', edit_product_attribute_type_variation_path(@product_attribute_type_variation) %> |
-<%= link_to 'Back', product_attribute_type_variations_path %>
+<%= link_to 'Edit Name', edit_product_attribute_type_variation_path(@product_attribute_type_variation) %>
